Main attributes for subpage SB established

--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -246,15 +246,15 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<div class="bread-crumbs">
 							<a href="../../brf/">Entreprenad<i class="icono-arrow2-left"></i></a>
-							<span class="bread-crumbs-title xs-hide">Fortlöpande besiktning</span>
+							<span class="bread-crumbs-title xs-hide">Slutbesiktning</span>
 						</div>
-						<h1 class="common-IntroText text-white">Fortlöpande besiktning säkerställer kvalitetskritiska moment i entreprenadens alla etapper.</h1>
+						<h1 class="common-IntroText text-white">En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning.</h1>
 						<p>
-							Vill du säkerställa att entreprenaden färdigställs enligt tidplanen och inom budget?
+							Vill du ha entreprenaden färdigställd snabbt och effektivt utan administrativt krångel?
 							<br>
-							Då är fortlöpande besiktning en stor fördel.
+							Då ska du boka din slutbesiktning hos oss.
 						</p>
-						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">kontakta mig</button> </a>
+						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">Få offert</button> </a>
 					</div>
 
 				</div>
@@ -269,7 +269,7 @@
 				<div class="fix-10-12">
 					<div class="col-5-12 center">
 						<h3 class="common-BodyTitle" style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
-						<p class="common-BodyText">Och har utfört ett stort antal besiktningar åt bland annat:</p>
+						<p class="common-BodyText">Besiktningsman.se har utfört hundratals slutbesiktningar åt bland annat:</p>
 						<ul class="flex grid later equal">
 							<li class="col-3-12 equalElement margin-bottom-1">
 								<img src="../../../assets/img/logos/riksbyggen.svg" alt="RIKSBYGGEN" style="width: 140px;">
@@ -281,7 +281,7 @@
 								<img src="../../../assets/img/logos/bonava.png" alt="BONAVA" style="width: 100px;">
 							</li>
 							<li class="col-3-12 equalElement margin-bottom-1">
-								<img src="../../../assets/img/logos/arosbostad.png" alt="AROS BOSTAD" style="width: 200px;">
+								<img src="../../../assets/img/logos/skanska.svg" alt="AROS BOSTAD" style="width: 200px;    padding-top: 12px;">
 							</li>
 						</ul>
 
@@ -298,29 +298,43 @@
 
 					<div class="col-5-12">
 						<div class="center">
-							<h2 class="common-IntroText">Varför göra en fortlöpande besiktning med Besiktningsman.se?</h2>
-							<p class="common-BodyText">
-								Varje entreprenad har kvalitetskritiska moment där ansvaret är uppdelat mellan flertal aktörer/underentreprenörer
-								 - En fortlöpande besiktning säkerställer att dessa delar är utförda korrekt innan de byggs in.
-							</p>
-							<p class="common-BodyText margin-bottom-5">
-								Vi kan hjälpa er redan i projekteringsstadiet med att identifiera vilka kvalitetskritiska moment som finns i ditt projekt.
-								Genom fortlöpande besiktningar av dessa så minimerar vi risken för en förskjuten tidplan eller <br> sent och dyrt avhjälpande.</p>
+							<h2 class="common-IntroText">Varför anlita Besiktningsman.se att utföra en slutbesiktning?</h2>
+							<ul class="flex margin-bottom-3">
+								<li class="col-4-12">
+									<p class="common-BodyText">
+										Våra erfarna och välutbildade besiktningsmän är de enda inom branschen
+										som arbetar helt digitalt med besiktningsappen iSpect.
+									</p>
+								</li>
+								<li class="col-4-12">
+									<p class="common-BodyText">
+										iSpect gör det enkelt för entreprenören att digital återapportera sitt avhjälpande,
+										<br> och samtliga utlåtanden med felbilagor blir samlade i iSpect portal i 10 år.
+									</p>
+								</li>
+								<li class="col-4-12">
+									<p class="common-BodyText">
+										Genom att anlita oss får du en opartisk bedömning av hur arbetet är utfört.
+										Felbilagorna levereras digitalt till alla parter samma dag för omedelbar avhjälpning
+										 <br> och utlåtandet får du inom 3 dagar.
+									 </p>
+								</li>
+							</ul>
 							<ul class="flex">
 								<li class="col-4-12">
 									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Insikt</h3>
-									<p class="common-BodyText">Identifiera alla kvalitetskritiska moment redan vid projekteringsstadiet.</p>
+									<h3 class="equalElement common-BodyTitle">Opartisk besiktning</h3>
+									<p class="common-BodyText">Få entreprenaden kontrollerad av en oberoende besiktningsman.</p>
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Planering</h3>
-									<p class="common-BodyText">Undvik en förskjuten tidsplan och dyrt avhjälpande.</p>
+									<h3 class="equalElement common-BodyTitle">Snabbt avhjälpande</h3>
+									<p class="common-BodyText">Felbilagor direkt till entreprenörens smartphone med återrapportering för ett snabbt och kostnadseffektivt avhjälpande.</p>
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor" style="width:110px;">
-									<h3 class="equalElement common-BodyTitle">Dokumentation</h3>
-									<p class="common-BodyText">Dela ut felbilagor direkt i din smartphone för ett snabbt och kostnadseffektivt avhjälpande.</p>
+									<h3 class="equalElement common-BodyTitle">Få full kontroll</h3>
+									<p class="common-BodyText">Via vår digitala portal kommer du att ha full koll på vem som ansvarar för respektive fel, och när felen blev avhjälpta.</p>
 								</li>
 							</ul>
 						</div>
@@ -345,17 +359,15 @@
 							<div class="" style="margin-left: 80px;">
 								<h3 class="common-BodyTitle">Uppstartsmöte</h3>
 								<p class="fix-4-12 toLeft common-BodyText">
-									Med fördel redan vid projekteringsskedet träffas parterna,
-									vår projektansvarig & huvudbesiktningsman för att gå igenom produktionstidsplanen och
-									avgöra vilka kvalitetskritiska moment som ska införlivas i  fortlöpande besiktning.
+									Projektansvarig & Huvudbesiktningsman träffa parter. Här avhandlas besiktningstidplan, besiktningsprocess m.m.
 								</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">2</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Planering</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Utifrån produktionstidsplanen skapar vi gemensamt en besiktningstidsplan, där det framgår datum för fortlöpande besiktning.</p>
+								<h3 class="common-BodyTitle">Startsammanträde</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Besiktningen börjar med att besiktningsmannen går igenom handlingar och egenkontroller på utförda arbeten samt informerar om hur besiktningen går till.</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
@@ -363,32 +375,38 @@
 							<div class="" style="margin-left: 80px;">
 								<h3 class="common-BodyTitle">Besiktning påbörjas</h3>
 								<p class="fix-4-12 toLeft common-BodyText">
-									Besiktningsgruppen kommer att fortlöpande utföra besiktning och notera eventuella fel i utförandet.
+									Entreprenaden besiktas okulärt i förhållande till vad som är avtalat och utfört enligt gällande myndighetskrav samt branschregler.
 								</p>
 							</div>
 						</li>
-						<h3 class="center margin-bottom-5">Besiktningens utförande</h3>
 						<li class="col-4-12">
 							<div class="fun-fact">4</div>
 							<div class="" style="margin-left: 80px;">
-								<p class="fix-4-12 toLeft common-BodyText">Vid fortlöpande besiktning sker alltid med efterbesiktning av noteringar från tidigare utförda besiktningar.</p>
+								<h3 class="common-BodyTitle2">Synpunkter noteras</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Parter har möjlighet att framföra sina synpunkter under besiktningen. (Kontraktsparter är beställare och entreprenör/er)</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">5</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Utlåtande</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Parter har nu tillgång till alla utlåtanden med felbilagor i vår digitala portal. </p>
+								<h3 class="common-BodyTitle">Slutsammanträde</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Besiktningsmannen meddelar om entreprenaden är godkänd eller icke godkänd - Avhjälpande skall ske snarast eller senast inom 2 månader.</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
-							<div class="fun-fact">✓</div>
+							<div class="fun-fact">6</div>
 							<div class="" style="margin-left: 80px;">
-								<p class="fix-4-12 toLeft common-BodyText">Nu är entreprenadens kvalitetskritiska moment kontrollerade med utlåtanden och felbilagor i iSpectportal.</p>
+								<h3 class="common-BodyTitle">Utlåtande</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Parter har direkt vid färdig besiktning tillgång till felbilaga med ansvar på respektive entreprenör i vår iSpectportal.</p>
 							</div>
 						</li>
 					</ul>
-
+					<div class="container-lg margin-top-1 margin-bottom-5">
+						<div class="box-CTA">
+							<img src="../../../assets/svg/checkmark_icon.svg" alt="✓">
+							<h2>Nu är entreprenaden slutbesiktad varvid entreprenören omedelbart kan börja avhjälpa noterade fel.</h2>
+						</div>
+					</div>
 				</div>
 
 			</div>
@@ -415,17 +433,20 @@
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
-					<p class="copy-1 common-BodyTitle">Undvik att ditt projekt råkar ut för en förskjuten tidplan eller överskriden budget med hjälp av en fortlöpande besiktning.</p>
+					<p class="copy-1 common-BodyTitle">Vi är de enda inom branschen som kan leverara felbilagorna digitalt samma dag med besiktningsappen iSpect.</p>
 					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+							<img src="../../../assets/img/logos/skandiafastigheter.png" alt="SKANDIA FASTIGHETER">
 						</li>
 						<li class="customer-logo">
 							<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
 						</li>
-						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+						<li class="customer-logo" style="width: 140px;">
+							<img src="../../../assets/img/logos/ffab.png" alt="FFAB" style="padding-bottom: 15px;">
+						</li>
+						<li class="customer-logo" style="width: 140px;">
+							<img src="../../../assets/img/logos/ncc.png" alt="NCC" style="padding-bottom: 15px;">
 						</li>
 					</ul>
 				</div>
@@ -455,7 +476,7 @@
 									I iSpect:s feldatabas har vi trehundra tusen av de vanligaste förekommande felen vid nyproduktion och rot.
 								</p>
 							<li class="col-6-12 bottom">
-								<img src="../../../assets/img/backgrounds/inspector_ipad.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+								<img src="../../../assets/img/backgrounds/inspectorIpad.JPG" class="soft-shadow img-border-radius" alt="Foto av besiktningsman med iPad" />
 							</li>
 						</ul>
 					</div>
@@ -468,7 +489,7 @@
 									Därmed påbörjas ett kostnadseffektivt avhjälpande direkt.
 								</p>
 							<li class="col-6-12 bottom">
-								<img src="../../../assets/img/backgrounds/inspector_documents.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+								<img src="../../../assets/img/backgrounds/inspectorFloor.JPG" class="soft-shadow img-border-radius" alt="Foto av besiktningsman på golv" />
 							</li>
 						</ul>
 					</div>
