--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -2,25 +2,25 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Fortlöpande besiktning</title>
+	<title>Besiktningsman.se | Slutbesiktning</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="X" />
+	<meta name="description" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="X" />
-	<meta property="og:description" content="X" />
+	<meta property="og:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning." />
+	<meta property="og:description" content="Vill du ha entreprenaden färdigställd snabbt och effektivt utan administrativt krångel? Då ska du boka din slutbesiktning hos oss." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/entreprenad/slutbesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
-	<meta name="twitter:title" content="X" />
-	<meta name="twitter:description" content="X" />
+	<meta name="twitter:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning." />
+	<meta name="twitter:description" content="Vill du ha entreprenaden färdigställd snabbt och effektivt utan administrativt krångel? Då ska du boka din slutbesiktning hos oss." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
