Updated some texts and added illustrative icons for the feature list on E SB

--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -269,7 +269,7 @@
 				<div class="fix-10-12">
 					<div class="col-5-12 center">
 						<h3 class="common-BodyTitle" style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
-						<p class="common-BodyText">Besiktningsman.se har utfört hundratals slutbesiktningar åt bland annat:</p>
+						<p class="common-BodyText">Vi har utfört tusentals slutbesiktningar åt fristående beställare, BRF:er samt bland annat:</p>
 						<ul class="flex grid later equal">
 							<li class="col-3-12 equalElement margin-bottom-1">
 								<img src="../../../assets/img/logos/riksbyggen.svg" alt="RIKSBYGGEN" style="width: 140px;">
@@ -298,21 +298,24 @@
 
 					<div class="col-5-12">
 						<div class="center">
-							<h2 class="common-IntroText">Varför anlita Besiktningsman.se att utföra en slutbesiktning?</h2>
+							<h2 class="common-IntroText margin-bottom-3">Varför anlita Besiktningsman.se att utföra en slutbesiktning?</h2>
 							<ul class="flex margin-bottom-3">
 								<li class="col-4-12">
+									<img src="../../../assets/svg/digitalHead_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<p class="common-BodyText">
 										Våra erfarna och välutbildade besiktningsmän är de enda inom branschen
 										som arbetar helt digitalt med besiktningsappen iSpect.
 									</p>
 								</li>
 								<li class="col-4-12">
+									<img src="../../../assets/svg/iSpectSquare_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<p class="common-BodyText">
 										iSpect gör det enkelt för entreprenören att digital återapportera sitt avhjälpande,
 										<br> och samtliga utlåtanden med felbilagor blir samlade i iSpect portal i 10 år.
 									</p>
 								</li>
 								<li class="col-4-12">
+									<img src="../../../assets/svg/handshake_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<p class="common-BodyText">
 										Genom att anlita oss får du en opartisk bedömning av hur arbetet är utfört.
 										Felbilagorna levereras digitalt till alla parter samma dag för omedelbar avhjälpning
@@ -322,12 +325,12 @@
 							</ul>
 							<ul class="flex">
 								<li class="col-4-12">
-									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
+									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">Opartisk besiktning</h3>
 									<p class="common-BodyText">Få entreprenaden kontrollerad av en oberoende besiktningsman.</p>
 								</li>
 								<li class="col-4-12">
-									<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
+									<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar tidsbesparning" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">Snabbt avhjälpande</h3>
 									<p class="common-BodyText">Felbilagor direkt till entreprenörens smartphone med återrapportering för ett snabbt och kostnadseffektivt avhjälpande.</p>
 								</li>
