Modified titles for e sb features

--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -302,6 +302,7 @@
 							<ul class="flex margin-bottom-3">
 								<li class="col-4-12">
 									<img src="../../../assets/svg/digitalHead_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Erfarenhet</h3>
 									<p class="common-BodyText">
 										Våra erfarna och välutbildade besiktningsmän är de enda inom branschen
 										som arbetar helt digitalt med besiktningsappen iSpect.
@@ -309,6 +310,7 @@
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/iSpectSquare_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">iSpect</h3>
 									<p class="common-BodyText">
 										iSpect gör det enkelt för entreprenören att digital återapportera sitt avhjälpande,
 										<br> och samtliga utlåtanden med felbilagor blir samlade i iSpect portal i 10 år.
@@ -316,6 +318,7 @@
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/handshake_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Samarbete</h3>
 									<p class="common-BodyText">
 										Genom att anlita oss får du en opartisk bedömning av hur arbetet är utfört.
 										Felbilagorna levereras digitalt till alla parter samma dag för omedelbar avhjälpning
