updated hardcoded styling to class

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -608,7 +608,7 @@
 
 				<div class="fix-12-12 center toCenter fromCenter">
 					<img src="../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
-					<p class="bold" style="margin-bottom: 50px;">Sveriges ledande entreprenadbesiktningsföretag</p>
+					<p class="bold margin-bottom-5" style="margin-bottom: 50px;">Sveriges ledande entreprenadbesiktningsföretag</p>
 					<div class="container-lg">
 						<ul class="grid fixedSpaces  center toCenter fromCenter">
 							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left" style="margin-right: 200px;">
