Minor fixes to news-page prep for uploading it

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -261,7 +261,7 @@
 					<div class="featured-article-content">
 						<h2 class="featured-article-title">
 							Vi är mycket glada att förmedla att vi som första besiktningsföretag tecknat ett
-							nationellt avtal med Skanska Sverige
+							nationellt avtal med <br> Skanska Sverige
 						</h2>
 						<h3 class="common-BodyText featured-article-subtitle">
 							Ett sådant samarbete är ett bevis på att Skanska,
@@ -284,46 +284,48 @@
 				</h2>
 				<!-- newsflow list / latest first -->
 				<div class="list">
-					<a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-BodyTitle">
+					<span href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-BodyTitle">
 						<h3 class="common-BodyTitle">Är du vår nästa kollega?</h3>
 						<p class="common-BodyText">
 							Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du får möjlighet att själv koordinera både större och mindre besiktningsprojekt inom bygg- och fastighetsbranschen?
 						</p>
-					</a>
+					</span>
 					<!-- <strong class="muted common-UppercaseText date">Apr 25, 2019</strong> -->
 					<hr>
-					<a href="#" class="common-BodyTitle">
+					<span href="#" class="common-BodyTitle">
 						<h3 class="common-BodyTitle">Kv Ektorp, Nacka</h3>
 						<p class="common-BodyText">
 							ByggVesta planerar att uppföra 207 studentlägenheter i Ektorp, Nacka.
 							<br>
 							Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
 						</p>
-					</a>
+					</span>
 					<!-- <strong class="muted common-UppercaseText date">Apr 12, 2019</strong> -->
 					<hr>
-					<a href="#" class="common-BodyTitle">
+					<span href="#" class="common-BodyTitle">
 						<h3 class="common-BodyTitle">BRF Bergkristallen, Falun</h3>
 						<p class="common-BodyText">
 							SHH Bostad planerar att bygga 34 bostäder i Falun.
 							<br>
 							Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
 						</p>
-					</a>
+					</span>
+					<hr>
 					<!-- <strong class="muted common-UppercaseText date">Apr 8, 2019</strong> -->
-					<a href="#" class="common-BodyTitle">
+					<span href="#" class="common-BodyTitle">
 						<h3 class="common-BodyTitle">Rinkebyterrassen, Rinkeby</h3>
 						<p class="common-BodyText">
 							Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15 till 16 september.
 						</p>
-					</a>
+					</span>
+					<hr>
 					<!-- <strong class="muted common-UppercaseText date">Apr 6, 2019</strong> -->
-					<a href="#" class="common-BodyTitle">
+					<span href="#" class="common-BodyTitle">
 						<h3 class="common-BodyTitle">Backåkra, Norra Djurgårdsstaden</h3>
 						<p class="common-BodyText">
 							I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
 						</p>
-					</a>
+					</span>
 					<!-- <strong class="muted common-UppercaseText date">Apr 2, 2019</strong> -->
 
 				</div>
@@ -388,9 +390,9 @@
 
 			</section>
 	</section>
-	<section class="container-lg">
-		<h3 class="">Artiklar</h3>
-		<ul class="flex margin-bottom-3">
+	<section class="container-lg" id="besiktningsbloggen">
+		<h3 class="">Besiktningsbloggen</h3>
+		<ul class="flex margin-bottom-3" style="padding-left: 0% !important;">
 			<li class="col-4-12">
 				<a href="http://bit.ly/bm_debattartikel_svd" target="_blank" class="article">
 					<img src="../assets/img/nyheter/bm_svd.jpg" alt="" >
@@ -435,7 +437,7 @@
 			</li>
 		</ul>
 	</section>
-	<section class="container-lg">
+	<section class="container-lg" id="byggintelligens">
 		<h3 class="">Nyhetsbrevet Byggintelligens</h3>
 		<ul class="flex margin-bottom-3">
 			<li class="col-4-12">
