--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -254,7 +254,7 @@
 	<!-- HEADER -->
 	<section class="slide" id="" style="background: transparent;margin-top: 140px;">
 			<div class="container-xl">
-				<a href="#" class="featured-article">
+				<span class="featured-article">
 					<div class="featured-article-image">
 						<img src="../assets/img/backgrounds/newsroomMainArticle.png" alt="Abstract shapes">
 					</div>
@@ -269,7 +269,7 @@
 							medverkar till branschens utveckling mot ett säkrare och effektivare bygge.
 						</h3>
 					</div>
-				</a>
+				</span>
 			</div>
 	</section>
 
@@ -284,11 +284,15 @@
 				</h2>
 				<!-- newsflow list / latest first -->
 				<div class="list">
-					<span href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-BodyTitle">
+					<span class="typeform-share common-BodyTitle">
 						<h3 class="common-BodyTitle">Är du vår nästa kollega?</h3>
 						<p class="common-BodyText">
-							Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du får möjlighet att själv koordinera både större och mindre besiktningsprojekt inom bygg- och fastighetsbranschen?
+							Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du
+							får möjlighet att själv koordinera både större och mindre besiktningsprojekt inom bygg- och fastighetsbranschen?
 						</p>
+						<a class="common-Link" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">
+							<p>Ansök här</p>
+						</a>
 					</span>
 					<!-- <strong class="muted common-UppercaseText date">Apr 25, 2019</strong> -->
 					<hr>
