--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -301,46 +301,55 @@
 							<h2 class="common-IntroText margin-bottom-3">Varför anlita Besiktningsman.se att utföra en slutbesiktning?</h2>
 							<ul class="flex margin-bottom-3">
 								<li class="col-4-12">
-									<img src="../../../assets/svg/digitalHead_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Erfarenhet</h3>
-									<p class="common-BodyText">
+									<img src="../../../assets/svg/digital_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">100% Digitala</h3>
 										Våra erfarna och välutbildade besiktningsmän är de enda inom branschen
 										som arbetar helt digitalt med besiktningsappen iSpect.
-									</p>
+									 </p>
 								</li>
+
 								<li class="col-4-12">
 									<img src="../../../assets/svg/iSpectSquare_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">iSpect</h3>
 									<p class="common-BodyText">
 										iSpect gör det enkelt för entreprenören att digital återapportera sitt avhjälpande,
-										<br> och samtliga utlåtanden med felbilagor blir samlade i iSpect portal i 10 år.
+										<br>	och samtliga utlåtanden med felbilagor blir samlade i <br> iSpect portal i 10 år.
 									</p>
 								</li>
 								<li class="col-4-12">
-									<img src="../../../assets/svg/handshake_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Samarbete</h3>
+									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Opartisk besiktning</h3>
 									<p class="common-BodyText">
 										Genom att anlita oss får du en opartisk bedömning av hur arbetet är utfört.
 										Felbilagorna levereras digitalt till alla parter samma dag för omedelbar avhjälpning
-										 <br> och utlåtandet får du inom 3 dagar.
-									 </p>
+										och utlåtandet får du inom 3 dagar.
+									</p>
 								</li>
 							</ul>
 							<ul class="flex">
 								<li class="col-4-12">
-									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Opartisk besiktning</h3>
-									<p class="common-BodyText">Få entreprenaden kontrollerad av en oberoende besiktningsman.</p>
+									<img src="../../../assets/svg/digitalHead_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Erfarenhet</h3>
+									<p class="common-BodyText">
+										Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete.
+										Det ger oss kapacitet att möta mycket höga kundkrav.
+									</p>
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar tidsbesparning" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">Snabbt avhjälpande</h3>
-									<p class="common-BodyText">Felbilagor direkt till entreprenörens smartphone med återrapportering för ett snabbt och kostnadseffektivt avhjälpande.</p>
+									<p class="common-BodyText">
+										Felbilagor direkt till entreprenörens smartphone med återrapportering för ett snabbt
+										och kostnadseffektivt avhjälpande.
+									</p>
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor" style="width:110px;">
-									<h3 class="equalElement common-BodyTitle">Få full kontroll</h3>
-									<p class="common-BodyText">Via vår digitala portal kommer du att ha full koll på vem som ansvarar för respektive fel, och när felen blev avhjälpta.</p>
+									<h3 class="equalElement common-BodyTitle">Kontroll</h3>
+									<p class="common-BodyText">
+										Via vår digitala portal kommer du att ha full koll på vem som ansvarar för respektive fel,
+										och när felen blev avhjälpta.
+									</p>
 								</li>
 							</ul>
 						</div>
