--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -303,6 +303,7 @@
 								<li class="col-4-12">
 									<img src="../../../assets/svg/digital_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">100% Digitala</h3>
+									<p class="common-BodyText">
 										Våra erfarna och välutbildade besiktningsmän är de enda inom branschen
 										som arbetar helt digitalt med besiktningsappen iSpect.
 									 </p>
@@ -331,7 +332,8 @@
 									<img src="../../../assets/svg/digitalHead_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">Erfarenhet</h3>
 									<p class="common-BodyText">
-										Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete.
+										Vi har cirka 30 välutbildade medarbetare med gedigen <br> bakgrund från byggsektorn och besiktningsarbete.
+										<br>
 										Det ger oss kapacitet att möta mycket höga kundkrav.
 									</p>
 								</li>
