Have added services books to reflect the BRF portion of BM

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -213,16 +213,15 @@
 						<p class="cta-headline bold">Besiktningar för bostadsrättsföreningar</p>
 						<ul class="grid grid-74 later equal left margin-top-5">
 
-							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
 								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" class="card blue" target="_blank">
 									<div class="content blue">
 										<div class="cover blue">
 											<img
 												src="../assets/documents/covers/brf_sb_cover.svg"
 												title="Hur går en slutbesiktning till?
-
 När besiktningsmannen har skickat slutbesiktningsutlåtandet, vilket är ett juridiskt dokument, så är hans uppdrag avslutat.
-Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig om hur fel skall avhjälpas eller konsultera part om en utförd besiktning. "
+Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig om hur fel skall avhjälpas eller konsultera part om en utförd besiktning."
 												alt="Hur går en slutbesiktning till?"
 												height="280"
 												width="300"
@@ -232,7 +231,7 @@ Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig o
 								</a>
 							</li>
 
-							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
 								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" class="card blue" target="_blank">
 									<div class="content blue">
 										<div class="cover blue">
@@ -245,7 +244,7 @@ Besiktningsmannen skall beredas tillträde till lägenheten,
 om Brf-inne-havare inte har möjlighet att närvara skall låset stå i serviceläge alternativt skall Brf-representanten inneha nyckel för att möjliggöra besiktning.
 Representant för Brf-styrelsen skall deltaga under hela besiktningen,
 besiktningsman går ej in i lägenhet vid serviceläge om inte representant är närvarande."
-												alt="Hur fungerar en efterbesiktning?"
+												alt="Hur går en Efterbesiktning till?"
 												height="280"
 												width="300"
 												>
@@ -254,21 +253,20 @@ besiktningsman går ej in i lägenhet vid serviceläge om inte representant är 
 								</a>
 							</li>
 
-							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
 								<a href="../assets/documents/brf/brf_sarskildbesiktning.pdf" class="card blue" target="_blank">
 									<div class="content blue">
 										<div class="cover blue">
 											<img
 												src="../assets/documents/covers/brf_ssb_cover.svg"
-												title="Hur fungerar en särskild besiktning?
+												title="Hur fungerar en Särskild besiktning?
 Besiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas.
 Besiktningsmannen skall beredas tillträde för att möjliggöra besiktning.
 Om tillträde ej ges betraktas felen som avhjälpta.
 Parter skall deltaga under hela besiktningen,
 om beställaren (konsumenten) ej kan deltaga och väljer ett ombud,
-skall detta vara befullmäktigat att föra talan.
-												"
-												alt="Hur fungerar en särskild besiktning?"
+skall detta vara befullmäktigat att föra talan."
+												alt="Hur går en Särskild besiktning till?"
 												height="280"
 												width="300"
 												>
@@ -276,6 +274,138 @@ skall detta vara befullmäktigat att föra talan.
 									</div>
 								</a>
 							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_forbesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_fb_cover.svg"
+												title="Hur fungerar en Förbesiktning?
+Förbesiktning kan ske när som helst under byggprocessen om någon part önskar det.
+Skälet kan exempelvis vara att någon del av entreprenaden kan bli svår att besikta eller felavhjälpa,
+om man väntar till efter färdigställandet.
+												"
+												alt="Hur går en Förbesiktning till?"
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_fortsattslutbesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_fsb_cover.svg"
+												title="Hur fungerar en Fortsattslutbesiktning?
+Fortsatt slutbesiktning kan föreskrivas av om entreprenaden inte godkänns vid slutbesiktningen,
+men den fortsatta slutbesiktningen kan i praktiken avgränsas till de delar som föranlett att slutbesiktningen inte godkändes.
+Fortsatt slutbesiktning kan sålunda vara av mindre omfattning än s k Ny slutbesiktning och vara ett alternativ till detta.
+												"
+												alt="Hur går en Förbesiktning till?"
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_garantibesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_gb_cover.svg"
+												title="Hur går en Garantibesiktning till?
+Garantibesiktning/2-årsbesiktning kan ske på beställarens initiativ före den 2-åriga garantitidens utgång.
+Besiktningen görs för att se om det framkommit fel som funnits, men inte upptäckts, vid slutbesiktningen."
+												alt="Hur går en Garantibesiktning till?"
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_overbesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_ob_cover.svg"
+												title="Hur går en Överbesiktning till?
+Överbesiktning kan ske om någon part anser att en tidigare gjord besiktning helt eller delvis kan ifrågasättas."
+												alt="Hur går en Överbesiktning till?"
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_kontrollansvarig.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_kontrollansvarig_cover.svg"
+												title="Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.
+Vid nyproduktion, om- och tillbyggnad där det behövs bygglov krävs en KA-Kontrollansvarig.
+En KA kan även behövas vid rivning eller markarbeten"
+												alt="Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal."
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_ovk.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_ovk_cover.svg"
+												title="OVK, Obligratorisk Ventilationskontroll.
+Obligatorisk ventilationskontroll, OVK, ska enligt lag göras innan ett ventilationssystem tas i bruk för första gången (första besiktning).
+För de flesta byggnader ska OVK sedan göras regelbundet, var 3 eller 6 år.
+OVK ska utföras av en certifierad sakkunnig funktionskontrollant.
+Det är byggnadens ägare som ska se till OVK utförs enligt gällande bestämmelser och föreskrifter."
+												alt="Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal."
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+								<a href="../assets/documents/brf/brf_fuktbesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
+											<img
+												src="../assets/documents/covers/brf_fuktbesiktning_cover.svg"
+												title="Fuktbesiktning; utredningar, mögelprovning, skadeutredningar.
+Fuktbesiktning kan utföras vid nyproduktion och ROT, samt för att kontrollera befintliga fastigheter.
+Fuktbesiktning kan avse alla typer av byggnader."
+												alt="Fuktbesiktning; utredningar, mögelprovning, skadeutredningar."
+												height="280"
+												width="300"
+												>
+										</div>
+									</div>
+								</a>
+							</li>
+
 						</ul>
 						<br>
 						<p class="cta-headline bold">Formulär & böcker</p>
