Fixed layout for contact page

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -182,40 +182,45 @@
 	</div>
 </nav>
 	<!-- HEADER -->
-	<div class="StripeBackground">
+<div class="StripeBackground">
 	    <div class="stripe s0"></div>
 	    <div class="stripe s2"></div>
 	    <div class="stripe s3"></div>
 	    <div class="stripe s4"></div>
-	</div>
-	<!-- typeform contact form -->
-	<section class="slide contact form-section" id="contactHeader" style="background: transparent;">
-		<div class="content">
-			<div class="container" style="height: 560px;">
-				<div class="wrap">
+</div>
+	<section class="slide form-section margin-top-1" data-name="boka" name="boka" data-title="boka" id="boka" style="background: transparent;">
+		<div class="container-lg">
+			<!-- temp typeform fix for mobile -->
+			<div class="mobileContactButtonFix">
+				<h3>Redo att boka?</h3>
+				<p>Fyll i formuläret så kontaktar vi dig.</p>
+				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/WkKJQ4" data-mode="popup" target="_blank">Kontakta mig </a>
+				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+			</div>
+			<!-- original typeform -->
+			<div class="formBackground form-column">
+				<h3 class="pad-header margin-0 center common-BodyTitle">
+					Frågor?
+					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+				</h3>
+				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+			</div>
+			<div class="secondary-column">
+				<div class="customers">
 					<h1 class="common-IntroText">Kontakta oss</h1>
-					<p class="common-BodyText">Vi svarar gärna på dina frågor. <br>Fyll i formuläret nedan så hör vi av oss så fort som möjligt.</p>
+					<p class="common-BodyText">Vi svarar gärna på dina frågor. <br>Fyll i formuläret så hör vi av oss så fort som möjligt!</p>
 					<p class="common-Link">
 						<a href="tel:0101654000">Ni kan även ringa oss mellan <br>08:30 - 17:00 på 010-165 40 00</a>
 					</p>
-					<div class="form-column" id="contactModal">
-						<div class="pad">
-							<h3 class="pad-header margin-0 text-blueGrey">
-								Kontaktformulär
-							</h3>
-							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-hide-footer=true style="width: 100%; height: 400px;"></div>
-							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-							<div class="pad-header">
-								<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
-							</div>
-						</div>
-					</div>
-
-
+					<hr>
+					<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
 				</div>
 			</div>
+
 		</div>
 	</section>
+
 <!-- Footer -->
 <section class="slide customFooter autoHeight">
 	<div class="content">
