Another text fix contact page

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -192,7 +192,7 @@
 		<div class="container-lg">
 			<!-- temp typeform fix for mobile -->
 			<div class="mobileContactButtonFix">
-				<h3>Redo att boka?</h3>
+				<h3>Frågor?</h3>
 				<p>Fyll i formuläret så kontaktar vi dig.</p>
 				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">Kontakta mig </a>
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
