--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -245,7 +245,7 @@
 
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<div class="bread-crumbs">
-							<a href="../../brf/">Entreprenad<i class="icono-arrow2-left"></i></a>
+							<a href="../../entreprenad/">Entreprenad<i class="icono-arrow2-left"></i></a>
 							<span class="bread-crumbs-title xs-hide">Fortlöpande besiktning</span>
 						</div>
 						<h1 class="common-IntroText text-white">Fortlöpande besiktning säkerställer kvalitetskritiska moment i entreprenadens alla etapper.</h1>
