--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -245,7 +245,7 @@
 
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<div class="bread-crumbs">
-							<a href="../../brf/">Entreprenad<i class="icono-arrow2-left"></i></a>
+							<a href="../../entreprenad/">Entreprenad<i class="icono-arrow2-left"></i></a>
 							<span class="bread-crumbs-title xs-hide">Slutbesiktning</span>
 						</div>
 						<h1 class="common-IntroText text-white">En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning.</h1>
